assets/styles/app.css
@import "tailwindcss";

body {
    @apply bg-slate-100;
}

.tableCol {
    @apply space-y-2 w-md px-4 py-2;
}

.gradeChip {
    @apply text-white rounded-md px-[4px] py-[2px];
}

.gradeGoodColor {
    @apply bg-green-600;
}

.gradeWarnColor {
    @apply bg-amber-600;
}

.gradeBadColor {
    @apply bg-red-700;
}

